--- a/public/partners.html
+++ b/public/partners.html
@@ -77,9 +77,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     </li>
-                    <li class="nav-item active"><a class="nav-link" href="index.php">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="startup.php">Start-Ups</a></li>
-                    <li class="nav-item"><a class="nav-link" href="investors.php">Investors</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="startups.html">Start-Ups</a></li>
+                    <li class="nav-item"><a class="nav-link" href="investors.html">Investors</a></li>
                     <li class="nav-item"><a class="nav-link" href="partners.html">Partners</a></li>
                     <li class="nav-item"><a class="btn btn-primary" href="https://innovationforum.ticketspice.com/invest-in-innovation" target="_blank" rel="noopener noreferrer" role="button">Buy Tickets</a></li>
                 </ul>
@@ -173,17 +173,17 @@
             margin-top: 50px;
             margin-bottom: 50px;
         ">
-                    <div class="row">
-                            <div class="col-lg-3">
+                    <div class="row flex-nowrap">
+                            <div class="col-lg-4 col-xs-12">
                                 <img src="images/thought_leadership.svg" alt="Thought Leadership" width="242" height="72" style="
                                 margin-left: -30;
                             ">
                                 <br>
                                 <br>
-                                <p>Share your story and showcase how your company is at the forefront of key issues in this industry. Be the authority which shapes your industry from the ground up.
+                                <p style="margin-left: -2rem;">Share your story and showcase how your company is at the forefront of key issues in this industry. Be the authority which shapes your industry from the ground up.
                                 </p>
                             </div>
-                            <div class="col-lg-3" style="
+                            <div class="col-lg-4 col-xs-12" style="
                     margin-right: 75px;
                 ">
                                 <img src="images/lead_generation.svg" alt="Lead Generation" width="242" height="72">
@@ -192,7 +192,7 @@
                                 <p>As experts in their fields, the Invest in Innovation audience can identify real value when they see it. Showcase your capabilities so they share why your offering is a must have.
                                 </p>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-4 col-xs-12">
                                 <img src="images/networking_partner.svg" alt="Stay Informed" width="242" height="72">
                                 <br>
                                 <br>
