--- a/public/partners.html
+++ b/public/partners.html
@@ -76,17 +76,17 @@
                 aria-label="Toggle navigation"> <span class="icon-bar"></span> </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    </li>
-                    <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="startups.html">Start-Ups</a></li>
-                    <li class="nav-item"><a class="nav-link" href="investors.html">Investors</a></li>
-                    <li class="nav-item"><a class="nav-link" href="partners.html">Partners</a></li>
-                    <li class="nav-item"><a class="btn btn-primary" href="https://innovationforum.ticketspice.com/invest-in-innovation" target="_blank" rel="noopener noreferrer" role="button">Buy Tickets</a></li>
-                </ul>
-            </div>
+                </li>
+                <li class="nav-item active"><a class="nav-link" href="index.php">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="startups.php">Start-Ups</a></li>
+                <li class="nav-item"><a class="nav-link" href="investors.php">Investors</a></li>
+                <li class="nav-item"><a class="nav-link" href="partners.html">Partners</a></li>
+                <li class="nav-item"><a class="btn btn-primary" href="https://innovationforum.ticketspice.com/invest-in-innovation" target="_blank" rel="noopener noreferrer" role="button">Buy Tickets</a></li>
+            </ul>
         </div>
-    </nav>
-    <script>
+    </div>
+</nav>
+<script>
         $(document).ready(function () {
             $(".main-navbar .navbar-toggler").on("click", function () {
                 $('.main-navbar').toggleClass('opened');
